# BrandFrame-Studio

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/agents/: creative_agent.py  product_agent.py  template_agent.py
backend/app/api/v1/: models.py  routes.py
backend/app/core/: config.py
backend/app/service/: brand_service.py
backend/data/templates/: event-promo-01.json  flash-deal-01.json  index.json  minimalist-brand-01.json  product-showcase-01.json  sale-banner-01.json  seasonal-offer-01.json
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/brandkit/edit/[id]/: page.tsx
frontend/app/brandkit/new/: page.tsx
frontend/app/editor/[brandkitId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/studio/: page.tsx
frontend/components/: AssetsOptionsPanel.tsx  BrandKitForm.tsx  FabricCanvas.tsx  GenerateAIPanel.tsx  ProductInfoPanel.tsx  ShapesOptionsPanel.tsx  TemplatesOptionsPanel.tsx  TextOptionsPanel.tsx  ThemeToggle.tsx
frontend/context/: auth-context.tsx
frontend/lib/: api.ts  brandkit-service.ts  firebase.ts  user-service.ts
