[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "firebase>=4.0.1",
    "firebase-admin>=7.1.0",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "pydantic-settings>=2.12.0",
]
