[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "firebase>=4.0.1",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "onnxruntime>=1.23.2",
    "pydantic-settings>=2.12.0",
    "rembg>=2.0.69",
]
